# rscaffold

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  _pkgdown.yml
.github/workflows/: main.yml
R/: hello.R
cpp/: CMakeLists.txt  README.md  add.cpp  add.h  test_add.cpp
man/: addition.Rd  square.Rd  subtraction.Rd
scripts/: coverage.R  coverage_html.R
src/: square.c
tests/: testthat.R
tests/testthat/: test-hello.R
vignettes/: demo.Rmd
